dev/tests/cases/neg/13_index_nonlist.tv
df main() -> void {
    set x: i64 = 5;
    echo!(x[0]);
}
